<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.detailscreen.DetailFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="6dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" android:layout_marginStart="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvCurrent" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"/>
                    <ImageView
                            android:src="@drawable/directional_placeholder"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:id="@+id/ivCurrent" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/tvCurrent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" android:contentDescription="@string/directional_compass"/>
                    <TextView
                            android:text="@string/winds_from_the"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTitle" app:layout_constraintStart_toEndOf="@+id/ivCurrent"
                            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toTopOf="@+id/tvCurrentSpeed"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" android:textSize="16sp"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvCurrentSpeed" android:layout_marginBottom="24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/ivCurrent"
                            app:layout_constraintStart_toEndOf="@+id/ivCurrent" android:layout_marginStart="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            android:textSize="16sp"
                            android:textStyle="bold" android:textColor="@android:color/black"/>
                    <ImageView
                            android:src="@drawable/directional_placeholder"
                            android:layout_width="0dp"
                            android:layout_height="80dp" android:id="@+id/ivSecond"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/tvSecond"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" android:contentDescription="@string/directional_compass"
                            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivThird"
                            app:layout_constraintHorizontal_chainStyle="packed"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvSecond" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/ivLine"
                            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/tvThird" android:textAlignment="center"
                            android:textAllCaps="true" app:layout_constraintHorizontal_chainStyle="packed"
                            android:textSize="16sp"/>
                    <ImageView
                            android:src="@drawable/line"
                            android:layout_width="0dp"
                            android:layout_height="3dp"
                            android:id="@+id/ivLine" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintTop_toBottomOf="@+id/ivCurrent"
                            android:layout_marginTop="8dp" android:layout_marginStart="8dp"
                            android:contentDescription="@string/line"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvSecondSpeed" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/ivSecond"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/tvThirdSpeed" android:textAlignment="center"
                            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvThird" app:layout_constraintStart_toEndOf="@+id/tvSecond"
                            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/ivLine"
                            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/tvForth" android:textAlignment="center"
                            android:textAllCaps="true" app:layout_constraintHorizontal_chainStyle="packed"
                            android:textSize="16sp"/>
                    <ImageView
                            android:src="@drawable/directional_placeholder"
                            android:layout_width="0dp"
                            android:layout_height="80dp" android:id="@+id/ivThird"
                            app:layout_constraintStart_toEndOf="@+id/ivSecond"
                            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/tvThird"
                            android:contentDescription="@string/directional_compass"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/ivForth"
                            app:layout_constraintHorizontal_chainStyle="packed"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvThirdSpeed" app:layout_constraintStart_toEndOf="@+id/tvSecondSpeed"
                            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/ivThird"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/tvForthSpeed" android:textAlignment="center"
                            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvForth" app:layout_constraintStart_toEndOf="@+id/tvThird"
                            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/ivLine"
                            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/tvFifth" android:textAlignment="center"
                            android:textAllCaps="true" app:layout_constraintHorizontal_chainStyle="packed"
                            android:textSize="16sp"/>
                    <ImageView
                            android:src="@drawable/directional_placeholder"
                            android:layout_width="0dp"
                            android:layout_height="80dp" android:id="@+id/ivForth"
                            android:contentDescription="@string/directional_compass"
                            app:layout_constraintStart_toEndOf="@+id/ivThird" android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvForth"
                            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivFifth"
                            app:layout_constraintHorizontal_chainStyle="packed"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvForthSpeed" app:layout_constraintStart_toEndOf="@+id/tvThirdSpeed"
                            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/ivForth"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintEnd_toStartOf="@+id/tvFifthSpeed" android:textAlignment="center"
                            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvFifth" app:layout_constraintStart_toEndOf="@+id/tvForth"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/ivLine" android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            app:layout_constraintHorizontal_bias="0.5" android:textAlignment="center"
                            android:textAllCaps="true" app:layout_constraintHorizontal_chainStyle="packed"
                            android:textSize="16sp"/>
                    <ImageView
                            android:src="@drawable/directional_placeholder"
                            android:layout_width="0dp"
                            android:layout_height="80dp" android:id="@+id/ivFifth"
                            android:contentDescription="@string/directional_compass"
                            app:layout_constraintStart_toEndOf="@+id/ivForth" android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvFifth"
                            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvFifthSpeed" app:layout_constraintStart_toEndOf="@+id/tvForthSpeed"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/ivFifth"
                            app:layout_constraintHorizontal_bias="0.5"
                            android:textAlignment="center" app:layout_constraintHorizontal_chainStyle="packed"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>